--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,8 @@
     padding: 0;
     box-sizing: border-box;
 }
+.app__information {
+    text-align: center;
+    margin-top: 70px;
+    color: gray;
+}
