Google clone created

--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -41,6 +41,7 @@
     margin: 0 7px;
     padding: 10px 20px;
     background-color: rgb(234, 237, 241);
+    color: rgb(87, 85, 85);
     border-radius: 5px;
     border: 1px rgb(234, 237, 241) solid;
     outline: none;
